--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/payment_method.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/payment_method.html
@@ -147,7 +147,7 @@
                                                                     Update
                                                                 </button>
                                                             </div>
-                                                            <div class="w-auto">
+                                                            <div class="w-auto" disabled="true">
                                                                 <a th:href="@{/admin/bill/payment_method/delete/{id}(id=${paymentMethod.id})}"
                                                                    onclick="return confirm('Xác nhận xóa')">
                                                                     <button type="button"
