--- a/webBanTiVi/src/main/resources/static/admin/plugin/css/bill.css
+++ b/webBanTiVi/src/main/resources/static/admin/plugin/css/bill.css
@@ -1,7 +1,12 @@
-.select-order:hover{
-    background-color: #f5f5f9;
-    color: black;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
 }
-.text-link{
-    color: #697a8d;
+.inputPage{
+    width: 60px !important;
+
+}
+.row-table{
+    vertical-align: middle;
 }
