--- a/webBanTiVi/src/main/resources/templates/admin/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_navbar.html
@@ -16,81 +16,50 @@
                 <input
                         type="text"
                         class="form-control border-0 shadow-none"
-                        placeholder="Search..."
-                        aria-label="Search..."
+                        th:placeholder="|#{page.search}...|"
+                        th:aria-label="|#{page.search}...|"
                 />
             </div>
         </div>
         <!-- /Search -->
 
         <ul class="navbar-nav flex-row align-items-center ms-auto">
-            <!-- Place this tag where you want the button to render. -->
-            <li class="nav-item lh-1 me-3">
-                <a
-                        class="github-button"
-                        href="https://github.com/themeselection/sneat-html-admin-template-free"
-                        data-icon="octicon-star"
-                        data-size="large"
-                        data-show-count="true"
-                        aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
-                >Star</a
-                >
-            </li>
-
             <!-- User -->
             <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
-                    <div class="avatar avatar-online">
-                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
+                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown"
+                   data-bs-auto-close="outside">
+                    <div class="avatar">
+                        <img src="/image/download.jpg" alt class="w-px-30 h-auto rounded-circle"/>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li>
-                        <a class="dropdown-item" href="#">
-                            <div class="d-flex">
-                                <div class="flex-shrink-0 me-3">
-                                    <div class="avatar avatar-online">
-                                        <img src="../assets/img/avatars/1.png" alt class="w-px-40 h-auto rounded-circle" />
-                                    </div>
-                                </div>
-                                <div class="flex-grow-1">
-                                    <span class="fw-semibold d-block">John Doe</span>
-                                    <small class="text-muted">Admin</small>
-                                </div>
-                            </div>
+                    <li class="dropdown dropstart">
+                        <a class="dropdown-item dropdown-toggle" href="javascript:void(0);" data-bs-toggle="dropdown">
+                            <span class="align-middle" th:text="#{lang.language}"></span>
                         </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="?lang=vi">
+                                    <span><img class="w-px-20" src="/image/vietnam.png"></span>
+                                    <span class="align-middle" th:text="#{lang.vietnamese}"></span>
+                                </a>
+                            </li>
+
+                            <li>
+                                <a class="dropdown-item" href="?lang=en">
+                                    <span><img class="w-px-20" src="/image/english.png"></span>
+                                    <span class="align-middle" th:text="#{lang.english}"></span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li>
-                        <div class="dropdown-divider"></div>
+                        <hr class="dropdown-divider">
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">
-                            <i class="bx bx-user me-2"></i>
-                            <span class="align-middle">My Profile</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">
-                            <i class="bx bx-cog me-2"></i>
-                            <span class="align-middle">Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="#">
-                        <span class="d-flex align-items-center align-middle">
-                          <i class="flex-shrink-0 bx bx-credit-card me-2"></i>
-                          <span class="flex-grow-1 align-middle">Billing</span>
-                          <span class="flex-shrink-0 badge badge-center rounded-pill bg-danger w-px-20 h-px-20">4</span>
-                        </span>
-                        </a>
-                    </li>
-                    <li>
-                        <div class="dropdown-divider"></div>
-                    </li>
-                    <li>
-                        <a class="dropdown-item" href="auth-login-basic.html">
+                        <a class="dropdown-item" href="/login">
                             <i class="bx bx-power-off me-2"></i>
-                            <span class="align-middle">Log Out</span>
+                            <span class="align-middle" th:text="#{navbar.logOut}">Log Out</span>
                         </a>
                     </li>
                 </ul>
