--- a/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
+++ b/webBanTiVi/src/main/resources/templates/admin/layout/_sidebar.html
@@ -17,46 +17,46 @@
         <li th:class="${#strings.equals(session.active,'/dashboard')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/dashboard}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-home-circle"></i>
-                <div data-i18n="Analytics">Dashboard</div>
+                <div th:text="#{sidebar.dashboard}"></div>
             </a>
         </li>
         <li th:class="${#strings.equals(session.active,'/statistic')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/statistic}" class="menu-link">
                 <i class=' menu-icon tf-icons bx bx-bar-chart-alt'></i>
-                <div data-i18n="Statistics">Statistic</div>
+                <div >Statistic</div>
             </a>
         </li>
 
         <li class="menu-header small text-uppercase">
-            <span class="menu-header-text">Management</span>
+            <span th:text="#{sidebar.management}"></span>
         </li>
 
         <li th:class="${#strings.equals(session.active,'/product')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/product}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-tv"></i>
-                <div data-i18n="order">Product</div>
+                <div th:text="#{sidebar.product}"></div>
             </a>
         </li>
         <li th:class="${#strings.equals(session.active,'/staff')?'menu-item active':'menu-item'}">
             <a th:href="@{/admin/staff}" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-user-pin"></i>
-                <div data-i18n="order">Staff</div>
+                <div th:text="#{sidebar.staff}">Staff</div>
             </a>
         </li>
         <li th:class="${#strings.contains(session.active,'/bill')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-receipt"></i>
-                <div data-i18n="">Bill</div>
+                <div th:text="#{sidebar.invoice}"></div>
             </a>
             <ul class="menu-sub">
                 <li th:class="${#strings.equals(session.active,'/bill/list_bill')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/bill/list_bill}" class="menu-link">
-                        <div data-i18n="order">List bill</div>
+                        <div th:text="#{sidebar.listInvoice}"></div>
                     </a>
                 </li>
                 <li th:class="${#strings.equals(session.active,'/bill/payment_method')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/bill/payment_method}" class="menu-link">
-                        <div data-i18n="order">Payment method</div>
+                        <div th:text="#{sidebar.paymentMethod}"></div>
                     </a>
                 </li>
             </ul>
@@ -64,29 +64,29 @@
         <li th:class="${#strings.contains(session.active,'customer')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-user-circle"></i>
-                <div data-i18n="Customer">Customer</div>
+                <div th:text="#{sidebar.customer}"></div>
             </a>
             <ul class="menu-sub">
                 <li th:class="${#strings.equals(session.active,'/customer/list')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/customer/list}" class="menu-link">
-                        <div data-i18n="list customer">List customer</div>
+                        <div th:text="#{sidebar.listCustomer}"></div>
                     </a>
                 </li>
             </ul>
         <li th:class="${#strings.contains(session.active,'voucher')?'menu-item active open':'menu-item'}">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-user-circle"></i>
-                <div data-i18n="Customer">Voucher</div>
+                <div th:text="#{sidebar.voucher}"></div>
             </a>
             <ul class="menu-sub">
                 <li th:class="${#strings.equals(session.active,'/voucher/list')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/voucher/list}" class="menu-link">
-                        <div data-i18n="list customer">List voucher</div>
+                        <div th:text="#{sidebar.listVoucher}"></div>
                     </a>
                 </li>
                 <li th:class="${#strings.equals(session.active,'/voucherCustomer')?'menu-item active':'menu-item'}">
                     <a th:href="@{/admin/voucherCustomer}" class="menu-link">
-                        <div data-i18n="chat">List voucher customer</div>
+                        <div th:text="#{sidebar.listVoucherCustomer}">List voucher customer</div>
                     </a>
                 </li>
             </ul>
